--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "json-server": "^0.17.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "eslint": "8.31.0",
